--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,9 @@ jobs:
         os: [ubuntu-18.04]
         backend: [c, cpp]
         python-version: [2.7]
+        env: [{}]
 
-#         include:
+        include:
 #           # Ubuntu sub-jobs:
 #           # ================
 #           # Linting
@@ -37,11 +38,10 @@ jobs:
 #             env: { TEST_CODE_STYLE: 1 }
 #             extra_hash: "-codestyle"
 #           # Limited API
-#           - os: ubuntu-18.04
-#             python-version: 3.6
-#             backend: "c,cpp"
-#             env: { LIMITED_API: "--limited-api", EXCLUDE: "--no-file" }
-#             extra_hash: "-limited_api"
+          - os: ubuntu-18.04
+            python-version: 3.6
+            backend: "c,cpp"
+            extra_hash: "-limited_api"
 #           - os: ubuntu-18.04
 #             python-version: 3.7
 #             backend: "c,cpp"
@@ -135,5 +135,5 @@ jobs:
 
       - name: Run CI
         continue-on-error: ${{ matrix.allowed_failure || false }}
-        env: ${{ matrix.env || false }}
+        env: ${{ matrix.env }}
         run: bash ./Tools/ci-run.sh
