--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 
 jobs:
   ci:
+    if: ${{ false }}
     strategy:
       # Allows for matrix sub-jobs to fail without canceling the rest
       fail-fast: false
@@ -19,7 +20,7 @@ jobs:
       #  allowed_failure     whether the job is allowed to fail
       #  extra_hash          extra hash str to differentiate from other caches with similar name (must always start with '-')
       matrix:
-        # Tests [amd64]
+        # Tests on amd64
         #
         # FIXME: 'cpp' tests seems to fail due to compilation errors (numpy_pythran_unit)
         # in all python versions and test failures (builtin_float) in 3.5<
@@ -131,19 +132,77 @@ jobs:
         with:
           fetch-depth: 1
 
-      - name: Setup python
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Cache [ccache]
+      - name: CCache
         uses: pat-s/always-upload-cache@v2.1.3
         if: startsWith(runner.os, 'Linux')
         with:
           path: ~/.ccache
           key: ${{ runner.os }}-ccache${{ matrix.extra_hash }}-${{ matrix.python-version }}-${{ env.BACKEND }}-${{ hashFiles('**/test-requirements*.txt', '**/ci.yml', '**/ci-run.sh') }}
 
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
       - name: Run CI
         continue-on-error: ${{ matrix.allowed_failure || false }}
         env: ${{ matrix.env }}
         run: bash ./Tools/ci-run.sh
+
+  ci-on-diff-arch:
+    strategy:
+      # Allows for matrix sub-jobs to fail without canceling the rest
+      fail-fast: false
+
+      # MATRIX:
+      # =======
+      # Required parameters:
+      #  os                  the architecture to run the pipeline on.
+      #                      Check https://hub.docker.com/r/multiarch/qemu-user-static/ for available
+      #                      architectures.
+      #  backend             the backend to use
+      matrix:
+        # Tests on different architectures
+        arch: [arm64v8, ppc64le]  # s390x disabled due to test errors
+        backend: [c, cpp]
+
+    # This defaults to 360 minutes (6h) which is way too long and if a test gets stuck, it can block other pipelines.
+    # From testing, the runs tend to take ~20 minutes, so a limit of 30 minutes should be enough. This can always be
+    # changed in the future if needed.
+    timeout-minutes: 30
+    runs-on: ubuntu-18.04
+
+    env:
+      DOCKER_IMAGE: quay.io/pypa/manylinux2014_${{ matrix.arch }}
+      BACKEND: ${{ matrix.backend }}
+      OS_NAME: ubuntu-18.04
+      PYTHON_VERSION: 3.8
+      USE_CCACHE: 1
+      CCACHE_DIR: /ccache
+      CCACHE_SLOPPINESS: "pch_defines,time_macros"
+      CCACHE_COMPRESS: 1
+      CCACHE_MAXSIZE: "200M"
+
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+
+      - name: CCache
+        uses: pat-s/always-upload-cache@v2.1.3
+        with:
+          path: /ccache
+          key: ccache-${{ matrix.arch }}-${{ env.BACKEND }}-${{ hashFiles('**/test-requirements*.txt', '**/ci.yml', '**/ci-run.sh') }}
+
+      - name: Set up QEMU
+        run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
+      - name: Run CI
+        run: |
+          docker run --rm -t -v ${{ github.workspace }}:/cython -v /ccache:/ccache --workdir=/cython \
+          ${{ matrix.arch }}/alpine /bin/bash -c "
+          apt update -y -q
+          apt install -q -y software-properties-common
+          update-alternatives --install /usr/bin/python python /opt/python/cp38-cp38/bin/python 60
+          bash ./Tools/ci-run.sh"
